# Genlayer-mcp

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
src/genlayer_docs_mcp/: __init__.py  __main__.py  genlayer-docs.txt  server.py
